--- a/styles/main.css
+++ b/styles/main.css
@@ -7,6 +7,7 @@
 
 body {
     margin: 0;
+    width: 700px;
 
     font-family: 'Roboto', Arial, sans-serif;
     font-weight: 400;
@@ -55,7 +56,6 @@ h1 > span {
 
 img {
     float: left;
-
     width: 80px;
 }
 /* #endregion */
