--- a/styles/main.css
+++ b/styles/main.css
@@ -7,7 +7,7 @@
 
 body {
     margin: 0;
-    width: 700px;
+    width: 350px;
 
     font-family: 'Roboto', Arial, sans-serif;
     font-weight: 400;
@@ -17,22 +17,19 @@ body {
 
 /* #region header */
 header {
-    position: relative;
     width: 100%;
-    height: 120px;
-    padding: 5px;
+    height: 140px;
+    padding: 0px;
+
+    border-bottom: 5px solid var(--colorPrimary);
 
     background-color: var(--colorPrimaryLight);
 }
 
 div.header-content {
-    position: absolute;
-    top: 50%;
-    left: 50%;
+    margin: auto;
 
     text-align: center;
-
-    transform: translate(-50%, -50%);
 }
 
 div.header-content p {
@@ -43,7 +40,7 @@ div.header-content p {
 }
 
 h1 {
-    float: left;
+    margin: auto;
 
     font-weight: 300;
 }
@@ -55,8 +52,8 @@ h1 > span {
 }
 
 img {
-    float: left;
-    width: 80px;
+    margin: auto;
+    width: 60px;
 }
 /* #endregion */
 
@@ -69,21 +66,19 @@ div.todo-header {
     display: flex;
 
     position: absolute;
-    top: 30px;
-    left: 50%;
-
-    transform: translateX(-50%);
+    top: 20px;
 }
 
 input:focus { outline: none; }
 
 input[type="text"] {
-    width: 250px;
+    width: 268px;
     padding: 8px 10px;
     margin-right: 5px;
 
-    border: 1px solid var(--colorPrimary);
+    border: 1px solid var(--colorPrimaryLight);
     border-radius: 20px;
+    box-shadow: 0px 1.5px 1px rgba(0, 0, 0, 0.3);
 
     color: var(--colorPrimary);
 
@@ -96,6 +91,7 @@ input[type="submit"] {
 
     border: 1px solid var(--colorPrimary);
     border-radius: 20px;
+    box-shadow: 0px 1.5px 1px rgba(0, 0, 0, 0.3);
 
     background-color: var(--colorPrimary);
     color: white;
@@ -108,8 +104,8 @@ input[type="submit"] {
 input[type="submit"]:hover { background-color: rgba(20, 131, 96, 0.774); }
 
 div.todo-body {
+    width: 100%;
     position: absolute;
-    width: 400px;
     top: 70px;
     left: 50%;
 
@@ -119,7 +115,7 @@ div.todo-body {
 ul.todo-list {
     position: relative;
     padding: 0;
-    min-height: 104px;
+    min-height: 78px;
 
     border: 0.5px solid rgba(0, 0, 0, 0.1);
     border-radius: 1px;
@@ -132,6 +128,8 @@ ul.todo-list {
 
 ul.todo-list > li {
     display: flex;
+
+    position: relative;
     padding: 0px 10px;
 
     border-bottom: 1px solid rgba(0, 0, 0, 0.1);
@@ -140,17 +138,25 @@ ul.todo-list > li {
     animation-duration: 0.5s;
 }
 
-li > p { flex: 30; }
+li > p {
+    flex: 30;
+
+    font-weight: 400;
+}
 
 li > i {
     flex: 1;
-    margin-top: 16px;
+
+    position: absolute;
+    right: 10px;
+    top: 50%;
     
     color: rgba(0, 0, 0, 0.1);
 
     font-size: 20px;
 
     cursor: pointer;
+    transform: translateY(-50%);
 
     transition-property: color;
     transition-duration: 0.3s;
@@ -180,7 +186,7 @@ div.noticePanel {
 
     color: rgba(50, 50, 50, 0.5);
 
-    text-align: center !important;
+    text-align: center;
     font-weight: 300;
 }
 /* #endregion */
